Getting started with Gateway API in multicluster Istio on EKS and GKE/echoserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver
  namespace: demo
  labels:
    app: echoserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echoserver
  template:
    metadata:
      labels:
        app: echoserver
    spec:
      containers:
      - name: echoserver
        image: imeshai/echoserver
        resources:
          requests:
            cpu: "100m"
        imagePullPolicy: IfNotPresent #Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: echoserver
  namespace: demo
  labels:
    app: echoserver
    service: echoserver
spec:
  ports:
  - port: 80
    name: http
    targetPort: 80
  selector:
    app: echoserver
