Getting started with Gateway API in multicluster Istio on EKS and GKE/echoserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echoserver
  namespace: demo
  labels:
    app: echoserver
    service: echoserver
spec:
  ports:
  - port: 80
    name: http
    targetPort: 80
  selector:
    app: echoserver
