Getting started with Gateway API in multicluster Istio on EKS and GKE/helloworld-service.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Service
metadata:
  name: helloworld
  namespace: demo
  labels:
    app: helloworld
    service: helloworld
spec:
  ports:
  - port: 80
    name: http
    targetPort: 5000
  selector:
    app: helloworld
