Getting started with Gateway API in multicluster Istio on EKS and GKE/echoserver-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echoserver-world-http-route
  namespace: demo
spec:
  parentRefs:
  - name: gateway
    namespace: istio-ingress
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: echoserver
      port: 80
