Getting started with Gateway API in multicluster Istio on EKS and GKE/helloworld-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hellow-world-http-route
  namespace: demo
spec:
  parentRefs:
  - name: gateway
    namespace: istio-ingress
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /hello
    backendRefs:
    - name: helloworld
      port: 80
